--- a/politicosgo/src/main/resources/application.properties
+++ b/politicosgo/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.address=0.0.0.0
 logging.file=politicosgo.log
-spring.data.mongodb.uri=mongodb://userbdgo:userbdgo123@ds125602.mlab.com:25602/politicosgobd
+spring.data.mongodb.uri=mongodb://userbdgo1:userbdgo1@ds125602.mlab.com:25602/politicosgobd
